--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 			<li><a href="about.html">ABOUT</a></li>
 			<li><a href="picture.html">PICTURES</a></li>
 			<li class="bdr"><a class="pdg" href="contact.html">CONTACT</a></li>
-			<li class="bdr"><a class="pdg" href="contact.html">Forum</a></li>					
+			<li class="bdr"><a class="pdg" href="contact.html">Forum</a></li>	
+			<a href="picture.html">PICTURES</a></li>
+			<li class="bdr"><a class="pdg" href="contact.html">unsed icon</a></li>				
 		</ul>
 	</div>
 <!--==============================Navigatin Ends=============================-->
